@@ -3,6 +3,7 @@ Version 0.5.2 (ongoing):
 	check ininstance in HilbertArray.__eq__
 	HilbertArray.O method
 	convert symbolic to complex for eig/svd
+	entropy method
 
 Version 0.5.1 (2011-04-03):
 	cphase was erroneously called cnot
